<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".view.AddBirthdayActivity">


    <TextView
        android:id="@+id/label_textview"
        style="@style/AppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_birthday_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gender_imageview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_textview"
        android:src="@drawable/ic_female" />

    <RadioGroup
        android:id="@+id/gender_select_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_imageview">

        <RadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appBlue"
            android:text="@string/male_text"
            />

        <RadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appBlue"
            android:text="@string/female_text"
            android:checked="true"/>
    </RadioGroup>

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_select_radio_group" />

    <EditText
        android:id="@+id/birthdate_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:hint="@string/birthday_text"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <EditText
        android:id="@+id/phone_number_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:hint="@string/phone_text"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_edittext" />


    <Button
        android:id="@+id/save_birthday_button"
        style="@style/AppActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/save_birthday_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>